--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,13 @@
   "extends": [
     "next/core-web-vitals", 
     "@rocketseat/eslint-config/react"
-  ]
+  ],
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  }
 }
